# wolfProvider

./: .dockerignore  .gitattributes  .gitignore  ChangeLog.md  LOGGING.md  Makefile.am  README-packaging.md  README.md  autogen.sh  commit-tests.sh  configure.ac  provider-fips.conf  provider.conf  test_all_logging_combos.c  test_comprehensive_logging.c  test_final_verification.c  test_logging.c  test_logging_verification.c  test_macro_combinations.c  test_macro_demo.c  test_macro_logging.c  verify_logging_docs.c
.github/: README.md
.github/nginx/: Dockerfile  nginx.conf  pqc_tls.t  test.sh
.github/scripts/: add-rsync-sha-test.sh  big-endian-test.sh  boot-qemu.sh  check-workflow-result.sh  expand-workflow.sh  install-packages.sh  osp-triage.py  pam-pkcs11-test.sh  test_sscep.sh  yocto-verify-common.sh
.github/workflow-src/: Makefile  cjose.yml.in  curl.yml.in  readme.md
.github/workflows/: README.md  _discover-versions.yml  asan.yml  async.yml  big-endian.yml  bind.yml  bind9.yml  build-wolfprovider-debian-nightly.yml  build-wolfprovider-debian.yml  build-wolfprovider-nightly.yml  build-wolfprovider.yml  cjose.yml  cmake.yml  cmdline.yml  codespell.yml  common.yml  curl.yml  debian-package.yml  fips-ready.yml  fips.yml  generated-workflows.yml  git-ssh-default-replace.yml  git-ssh-dr.yml  grpc.yml  haproxy.yml  hostap-vm.yml  hostap.yml  iperf.yml  ipmitool.yml  kmod.yml  krb5.yml  libcryptsetup.yml  libeac3.yml  libfido2.yml  libhashkit2.yml  libnice.yml  liboauth2.yml  libp11.yml  librelp.yml  libssh2.sh  (+60 more)
IDE/Android/: README.md  build.sh  run.sh  run_helper.sh  run_openssl.sh
IDE/XCODE/: README.md  build-all.sh  build-openssl-framework.sh  build-wolfprovider-framework.sh  build-wolfssl-framework.sh  run_openssl.sh
certs/: include.am
debian/: changelog  changelog-update.sh  clean  control  copyright  install-openssl.sh  install-wolfprov.sh  install-wolfssl.sh  libdefault-wolf0.install  libdefault0.install  libssl-dev.install  libssl-dev.links  libssl3.install  libwolfprov-dev.docs  libwolfprov-dev.install  libwolfprov.install  libwolfprov.links  libwolfprov.postinst  libwolfprov.postrm  libwolfprov.triggers  openssl.install  openssl.links  openssl.postinst  openssl.postrm  rules  shlibs.local
debian/tests/: bind9.sh  cjose.sh  cjose_smoke.c  curl.sh  iperf.sh  kmod.sh  oaep.sh  ppp.sh  ppp_smoke.c  rsa.sh  snmp.sh
default_stub/: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  wp_default_stub.c
docker/wolfprovider-test-deps/: Dockerfile
docs/: FIPS_INTEGRATION_GUIDE.md  INTEGRATION_GUIDE.md
examples/: include.am  openssl_example.c
fips/: libwolfssl-dbgsym_5.8.2+commercial.fips.linuxv5.2.4+1_amd64.deb  libwolfssl-dbgsym_5.8.2+commercial.fips.linuxv5.2.4_amd64.deb  libwolfssl-dbgsym_5.8.4+commercial.fips.linuxv5.2.4+1_amd64.deb  libwolfssl-dev_5.8.2+commercial.fips.linuxv5.2.4+1_amd64.deb  libwolfssl-dev_5.8.2+commercial.fips.linuxv5.2.4_amd64.deb  libwolfssl-dev_5.8.4+commercial.fips.linuxv5.2.4+1_amd64.deb  libwolfssl_5.8.2+commercial.fips.linuxv5.2.4+1_amd64.deb  libwolfssl_5.8.2+commercial.fips.linuxv5.2.4_amd64.deb  libwolfssl_5.8.4+commercial.fips.linuxv5.2.4+1_amd64.deb
fips/replace-default/: core-image-minimal.wic.xz  core-image-minimal.wic.xz.reassemble.sh
fips/standalone/: core-image-minimal.wic.xz  core-image-minimal.wic.xz.reassemble.sh
include/: include.am
include/wolfprovider/: alg_funcs.h  internal.h  settings.h  version.h  version.h.in  wp_fips.h  wp_logging.h  wp_params.h  wp_wolfprov.h
m4/: m4_ax_check_openssl.m4  m4_ax_check_wolfssl.m4
nonfips/: libwolfssl-dbgsym_5.8.2_amd64.deb  libwolfssl-dbgsym_5.8.4_amd64.deb  libwolfssl-dev_5.8.2_amd64.deb  libwolfssl-dev_5.8.4_amd64.deb  libwolfssl_5.8.2_amd64.deb  libwolfssl_5.8.4_amd64.deb
nonfips/replace-default/: core-image-minimal.wic.xz  core-image-minimal.wic.xz.reassemble.sh
nonfips/standalone/: core-image-minimal.wic.xz  core-image-minimal.wic.xz.reassemble.sh
openssl/: libssl-dev_3.0.17-1~deb12u2+wolfprov1_amd64.deb  libssl-doc_3.0.17-1~deb12u2+wolfprov1_all.deb  libssl3_3.0.17-1~deb12u2+wolfprov1_amd64.deb  openssl-dbgsym_3.0.17-1~deb12u2+wolfprov1_amd64.deb  openssl_3.0.17-1~deb12u2+wolfprov1_amd64.deb
openssl/debs-default/: libssl-dev_3.0.17-1~deb12u2+wolfprov1_amd64.deb  libssl-dev_3.0.18-1~deb12u1+wolfprov1_amd64.deb  libssl-doc_3.0.17-1~deb12u2+wolfprov1_all.deb  libssl-doc_3.0.18-1~deb12u1+wolfprov1_all.deb  (+6 more)
patches/: README.md  openssl3-replace-default.patch
scripts/: build-debian.sh  build-wolfprovider.sh  env-setup  include.am  openssl-3_0_0.sh  openssl-test.sh  openssl-utils.sh  oras-build-deps.sh  osp-triage.py  patch-libcrypto-exports.sh  patch-openssl-fips.sh  replace-default.sh  resolve-osp-patch.sh  resolve-ref.sh  test-git-ssh-dr.sh  test-openssl.sh  test-pqc-kat.sh  test-sanity.sh  test-wp-cs.sh  utils-general.sh  utils-openssl.sh  utils-wolfprovider.sh  utils-wolfssl.sh  verify-debian.sh  verify-install.sh  wolfssl-5_0_0.sh  wolfssl-utils.sh  wp-cs-test.sh
src/: include.am  wp_aes_aead.c  wp_aes_block.c  wp_aes_stream.c  wp_aes_wrap.c  wp_chachapoly_aead.c  wp_chapoly.c  wp_cmac.c  wp_dec_epki2pki.c  wp_dec_pem2der.c  wp_default_replace.c  wp_des.c  wp_dh_exch.c  wp_dh_kmgmt.c  wp_digests.c  wp_drbg.c  wp_ecc_kmgmt.c  wp_ecdh_exch.c  wp_ecdsa_sig.c  wp_ecx_exch.c  wp_ecx_kmgmt.c  wp_ecx_sig.c  wp_file_store.c  wp_fips.c  wp_gmac.c  wp_hkdf.c  wp_hmac.c  wp_internal.c  wp_kbkdf.c  wp_kdf_exch.c  wp_kdf_kmgmt.c  wp_krb5kdf.c  wp_logging.c  wp_mac_kmgmt.c  wp_mac_sig.c  wp_mldsa_kmgmt.c  wp_mldsa_sig.c  wp_mlkem_kem.c  wp_mlkem_kmgmt.c  wp_mlx_kem.c  (+12 more)
test/: include.am  test_aestag.c  test_chachapoly.c  test_cipher.c  test_cmac.c  test_ct.c  test_dh.c  test_digest.c  test_drbg_seed_src.c  test_ecc.c  test_ecx.c  test_gmac.c  test_hkdf.c  test_hmac.c  test_kbkdf.c  test_krb5kdf.c  test_logging.c  test_mldsa.c  test_mlkem.c  test_pbe.c  test_pbkdf2.c  test_pkcs7_x509.c  test_pkey.c  test_rand.c  test_rand_seed.c  test_rsa.c  test_seccomp_sandbox.c  test_sshkdf.c  test_tls1_prf.c  test_tls_cbc.c  unit.c  unit.h
test/standalone/: include.am  (+2 more)
(+111 files in other folders)
